# Kea

./: .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  GEMINI.md  KERNEL_IMPROVEMENT_BRAINSTORM.md  KERNEL_RECURSION_PLAN.md  README.md  alembic.ini  batch_convert_to_project.py  debug_discovery.py  debug_finta.py  debug_mibian.py  debug_output.txt  debug_output_2.txt  debug_pandas_ta.py  docker-compose.yml  launcher.py  pyproject.toml  pytest.ini  reproduce_newspaper.py  run_test.py  temp_chain_9504e0d6786641e29da4bcf9fed93863.csv  test_output.txt  test_output2.txt  update_migration_imports.ps1  verify_finviz.py  verify_integrity.py  verify_server_import.py  verify_yfinance.py
mcp_servers/analysis_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/analysis_server/tools/: __init__.py  advanced_plot_ops.py  advanced_stats_ops.py  agent_ops.py  cleaning_ops.py  feature_ops.py  plot_ops.py  signal_ops.py  stat_tests.py  stats_ops.py  time_series_ops.py
mcp_servers/analytics_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/analytics_server/tools/: cleaning.py  eda.py  stats.py
mcp_servers/browser_agent_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/browser_agent_server/tools/: __init__.py  browser_ops.py  memory_ops.py  validation_ops.py
mcp_servers/data_sources_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/data_sources_server/tools/: fetchers.py
mcp_servers/ddg_search_server/: README.md  __init__.py  ddg_client.py  pyproject.toml  server.py
mcp_servers/ddg_search_server/tools/: __init__.py  ai_ops.py  bulk_ops.py  map_ops.py  media_ops.py  news_ops.py  text_ops.py
mcp_servers/document_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/document_server/tools/: excel.py  html.py  json_tool.py  pdf.py  word.py
mcp_servers/finta_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/finta_server/tools/: advanced_oscillators.py  bulk.py  clouds.py  core.py  exits_math.py  exotics.py  levels.py  momentum.py  pressure.py  trend.py  universal.py  volatility.py  volume.py  volume_flow.py  weighted.py  zones.py
mcp_servers/finviz_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/finviz_server/tools/: __init__.py  bulk_ta.py  calendar_news.py  charts.py  financials.py  global_markets.py  groups.py  insider.py  quote.py  screener.py  strategy.py
mcp_servers/html5lib_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/html5lib_server/tools/: __init__.py  bulk_ops.py  core_ops.py  filter_ops.py  parse_ops.py  serialize_ops.py  super_ops.py  walk_ops.py
mcp_servers/matplotlib_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/matplotlib_server/tools/: __init__.py  advanced_ops.py  animation_ops.py  basic_ops.py  core_ops.py  layout_ops.py  patch_ops.py  scientific_ops.py  specialty_ops.py  stats_ops.py  super_ops.py  three_d_ops.py
mcp_servers/mibian_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/mibian_server/tools/: advanced_greeks.py  american.py  barriers.py  bulk.py  core.py  exotics.py  greeks.py  pricing.py  simulation.py  strategies.py  utilities.py  volatility.py
mcp_servers/ml_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/ml_server/tools/: __init__.py  anomaly.py  automl.py  clustering.py  clustering_ops.py  decomposition_ops.py  ensemble_ops.py  forecast.py  importance.py  metrics_ops.py  preprocessing_ops.py  sklearn_wrappers.py  tuning_ops.py  utils.py  xgboost_ops.py
mcp_servers/networkx_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/networkx_server/tools/: __init__.py  basic_ops.py  centrality_ops.py  community_ops.py  core_ops.py  gen_ops.py  io_ops.py  linalg_ops.py  path_ops.py  super_ops.py
mcp_servers/newspaper_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/newspaper_server/tools/: __init__.py  article_single.py  bulk_processor.py  core.py  nlp_trends.py  source_discovery.py
mcp_servers/openpyxl_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/openpyxl_server/tools/: __init__.py  advanced_features.py  analytics_ops.py  audit_ops.py  chart_ops.py  clean_ops.py  formatting_ops.py  formula_ops.py  manage_rows_cols.py  metadata_ops.py  object_ops.py  read_ops.py  sheet_ops.py  structure_ops.py  style_ops.py  template_ops.py  workbook_ops.py  write_ops.py
mcp_servers/pandas_server/: README.md  __init__.py  pyproject.toml  server.py  utils.py
mcp_servers/pandas_server/tools/: __init__.py  bulk_ops.py  chain_ops.py  core_ops.py  feature_ops.py  inspection_ops.py  io_ops.py  logic_ops.py  math_ops.py  ml_ops.py  nlp_ops.py  pipeline_ops.py  quality_ops.py  stat_ops.py  struct_ops.py  text_ops.py  time_ops.py  transform_ops.py  window_ops.py
mcp_servers/pandas_ta_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/pandas_ta_server/tools/: alpha.py  backtest.py  bulk.py  candles.py  core.py  cycles.py  ml.py  momentum.py  (+6 more)
mcp_servers/pdfplumber_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/pdr_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/playwright_server/: README.md  __init__.py  pyproject.toml  server.py  session_manager.py
mcp_servers/plotly_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/portfolio_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/python_edgar_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/python_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/quantstats_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/rapidfuzz_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/scipy_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/scraper_server/: README.md  __init__.py  pyproject.toml  server.py
mcp_servers/seaborn_server/: README.md  __init__.py  pyproject.toml  server.py
(+2420 files in other folders)
