[project]
name = "analysis_server"
version = "0.1.0"
description = "MCP Server for analysis_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scipy",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
