[project]
name = "analytics_server"
version = "0.1.0"
description = "MCP Server for analytics_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "scipy",
    "structlog",
    "wrapt",
    "ydata-profiling",
]

[tool.uv]
dev-dependencies = []
