[project]
name = "browser_agent_server"
version = "0.1.0"
description = "MCP Server for browser_agent_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "mcp",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
