[project]
name = "ddg_search_server"
version = "0.1.0"
description = "MCP Server for ddg_search_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckduckgo_search",
    "mcp",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
