[project]
name = "document_server"
version = "0.1.0"
description = "MCP Server for document_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4",
    "httpx",
    "h2",
    "mcp",
    "openpyxl",
    "pandas",
    "pydantic",
    "pymupdf",
    "python-docx",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
