[project]
name = "finta_server"
version = "0.1.0"
description = "MCP Server for finta_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "finta",
    "mcp",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
