[project]
name = "html5lib_server"
version = "0.1.0"
description = "MCP Server for html5lib_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "html5lib",
    "lxml",
    "mcp",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
