[project]
name = "matplotlib_server"
version = "0.1.0"
description = "MCP Server for matplotlib_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "#   matplotlib",
    "#   mcp",
    "#   numpy",
    "#   pandas",
    "#   pillow",
    "#   scipy",
    "#   seaborn",
    "#   structlog",
    "mcp"
]

[tool.uv]
dev-dependencies = []
