[project]
name = "networkx_server"
version = "0.1.0"
description = "MCP Server for networkx_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "networkx",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scipy",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
