[project]
name = "newspaper_server"
version = "0.1.0"
description = "MCP Server for newspaper_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser",
    "httpx",
    "lxml",
    "lxml_html_clean",
    "mcp",
    "newspaper4k",
    "nltk",
    "pydantic",
    "python-dotenv",
    "structlog",
    "trafilatura",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
