[project]
name = "pandas_server"
version = "0.1.0"
description = "MCP Server for pandas_server"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "numpy",
    "openpyxl",
    "pandas",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
