[project]
name = "pdfplumber_server"
version = "0.1.0"
description = "MCP Server for pdfplumber_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pdfplumber",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
