[project]
name = "pdr_server"
version = "0.1.0"
description = "MCP Server for pdr_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "pandas<2.0.0",
    "pandas-datareader",
    "pydantic",
    "python-dotenv",
    "setuptools",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
