[project]
name = "pdr_server"
version = "0.1.0"
description = "MCP Server for pdr_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp",
    "pandas",
    "pandas-datareader",
    "pydantic",
    "python-dotenv",
    "setuptools",
    "structlog",
    "tabulate",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
