[project]
name = "plotly_server"
version = "0.1.0"
description = "MCP Server for plotly_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kaleido",
    "mcp",
    "numpy",
    "pandas",
    "plotly",
    "pydantic",
    "python-dotenv",
    "scipy",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
