[project]
name = "plotly_server"
version = "0.1.0"
description = "MCP Server for plotly_server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaleido>=0.2.1",
    "mcp",
    "numpy",
    "pandas",
    "plotly",
    "pydantic",
    "python-dotenv",
    "scipy",
    "statsmodels",
    "structlog",
    "wrapt",
]

[dependency-groups]
dev = []
