[project]name = "portfolio_server"version = "0.1.0"description = "MCP Server for portfolio_server"requires-python = ">=3.12"dependencies = [    "matplotlib",    "mcp",    "numpy",    "pandas",    "pydantic",    "pyportfolioopt",    "python-dotenv",    "scipy",    "structlog",    "tabulate",    "wrapt",][tool.uv]dev-dependencies = []