[project]
name = "python_server"
version = "0.1.0"
description = "MCP Server for python_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "mcp",
    "pandas",
    "pydantic",
    "python-dotenv",
    "scikit-learn",
    "structlog",
    "wrapt",
    "yfinance",
]

[tool.uv]
dev-dependencies = []
