[project]name = "python_server"version = "0.1.0"description = "MCP Server for python_server"readme = "README.md"requires-python = ">=3.12"dependencies = [    "duckdb",    "mcp",    "pandas",    "pydantic",    "python-dotenv",    "scikit-learn",    "structlog",    "tabulate",    "wrapt",    "yfinance",][tool.uv]dev-dependencies = []