[project]
name = "quantstats_server"
version = "0.1.0"
description = "MCP Server for quantstats_server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "#   matplotlib",
    "#   mcp",
    "#   pandas",
    "#   quantstats",
    "#   seaborn",
    "#   structlog",
    "#   yfinance",
    "mcp"
]

[tool.uv]
dev-dependencies = []
