[project]
name = "quantstats_server"
version = "0.1.0"
description = "MCP Server for quantstats_server"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "mcp",
    "numpy",
    "pandas",
    "pydantic",
    "python-dotenv",
    "quantstats",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
