[project]name = "rapidfuzz_server"version = "0.1.0"description = "MCP Server for rapidfuzz_server"readme = "README.md"requires-python = ">=3.12"dependencies = [    "mcp",    "numpy",    "pandas",    "pydantic",    "python-dotenv",    "rapidfuzz",    "structlog",    "wrapt",][tool.uv]dev-dependencies = []