[project]
name = "scraper_server"
version = "0.1.0"
description = "MCP Server for Scraper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "mcp",
    "playwright",
    "pydantic",
    "python-dotenv",
    "structlog",
    "wrapt",
]

[tool.uv]
dev-dependencies = []
